Resolve and remove world-bundle resource pack